--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -625,6 +625,8 @@ tbody td ion-icon:hover {
   transition: 0.6s;
 }
 @media (max-width: 992px) {
+
+  
   main {
     width: 100%;
     overflow-x: hidden;
@@ -714,9 +716,8 @@ tbody td ion-icon:hover {
     background:none;
   }
   #main .containerMax{
-    padding: 50px 0 45px 0;
+    padding: 20% 0 45px 0;
     flex-direction: column;
-    border: 1px solid red;
   }
   #main .containerMax .box-coluna{
     width: 95%;
