--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -524,7 +524,7 @@ ul > li {
   background-image: url('../../vendor/image/sc01.png');
 }
 .project-body:nth-child(2){
-  background-image: url('../../vendor/image/flyspider.jpg');
+  background-image: url('../../vendor/image/sc02.png');
 }
 .project-body:nth-child(3){
   background-image: url('../../vendor/image/bots.jpg');
