--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -199,7 +199,7 @@ ul > li {
 #service-area,
 #about,
 #contact-area,
-#sota-area {
+#client-side{
   margin: 60px 0;
   padding: 96px 30px;
 }
@@ -234,13 +234,18 @@ ul > li {
   justify-content: center;
 }
 #service-area .containerMax,
-#works .containerMax{
+#works .containerMax,
+#client-side .containerMax{
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
 }
 #service-area .box-service{
   flex: 1 1 325px;
+}
+.box-service .imgLogoClient{
+  width: 180px;
+  height: 180px;
 }
 #sota-area .containerMax{
   height: 45vh;
@@ -388,6 +393,7 @@ ul > li {
 /* btn malito */
 .btn-malito {
   border: 2px solid var(--color-secundary);
+  border-radius: 20px;
   color: var(--text-color);
   padding: 5px 15px;
   letter-spacing: 2px;
@@ -718,7 +724,7 @@ tbody td ion-icon:hover {
   }
   #menu-toggle {
     position: fixed;
-    inset: 0 0 0 30%;
+    inset: 0 0 0 0;
     height: 100vh;
     background: var(--color-primary);
     backdrop-filter: 25px;
@@ -740,6 +746,10 @@ tbody td ion-icon:hover {
     align-items: center;
     justify-content: center;
     flex-direction: column;
+    list-style-type: none;
+  }
+  .nav-list-social{
+    display: none;
   }
   .nav-ol-list li {
     margin: 15px 0;
@@ -1030,5 +1040,103 @@ tbody td ion-icon:hover {
   footer .nav-list-social li {
     font-size: 20px;
     margin-right: 35px;
+  }
+}
+
+/* Box Marca Clientes */
+
+.boxClientSide {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+  width: 200px;
+  height: 200px;
+  overflow: hidden;
+  margin: 10px;
+  border: 1px solid #616161;
+}
+
+.logoClient {
+  width: 100px;
+  height: 100px;
+  object-fit: cover;
+  transition: opacity 0.5s ease;
+}
+
+.overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: none;
+  opacity: 0;
+  transition: opacity 0.5s ease;
+}
+
+.text {
+  color: var(--color-secundary);
+  font-size: 18px;
+  font-weight: bold;
+}
+
+.boxClientSide:hover .logoClient {
+  opacity: 0;
+}
+
+.boxClientSide:hover .overlay {
+  opacity: 1;
+}
+
+@media (max-width: 767px) {
+  #client-side{
+    padding: 5px;
+  }
+  #client-side .containerMax {
+    flex-direction: row;
+    align-items: center;
+  }
+
+  .boxClientSide {
+    width: calc(50% - 20px);
+    height: auto;
+    padding: 30px;
+  }
+
+  .logoClient {
+    width: 100px;
+    height: 100px;
+    object-fit: cover;
+    transition: opacity 0.5s ease;
+  }
+  .overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: none;
+    opacity: 0;
+    transition: opacity 0.5s ease;
+  }
+  
+  .text {
+    color: var(--color-secundary);
+    font-size: 10pt;
+  }
+  
+  .boxClientSide:hover .logoClient {
+    opacity: 0;
+  }
+  
+  .boxClientSide:hover .overlay {
+    opacity: 1;
   }
 }
