--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -535,30 +535,41 @@ ul > li {
   background-size: cover;
 }
 .project-body:nth-child(1){
-  background-image: url('../../vendor/image/sc01.png');
+  background-image: url('../../vendor/image/scSmall01.png');
 }
 .project-body:nth-child(2){
-  background-image: url('../../vendor/image/sc02.png');
+  background-image: url('../../vendor/image/scSmall02.png');
 }
 .project-body:nth-child(3){
-  background-image: url('../../vendor/image/sc03.png');
+  background-image: url('../../vendor/image/scSmall03.png');
 }
 .project-body:nth-child(4){
-  background-image: url('../../vendor/image/sc04.png');
+  background-image: url('../../vendor/image/scSmall04.png');
 }
 .project-body:nth-child(5){
-  background-image: url('../../vendor/image/sc05.png');
+  background-image: url('../../vendor/image/scSmall05.png');
 }
 .project-body:nth-child(6){
-  background-image: url('../../vendor/image/sc06.png');
+  background-image: url('../../vendor/image/scSmall06.png');
 }
 .project-body:nth-child(7){
-  background-image: url('../../vendor/image/sc07.png');
+  background-image: url('../../vendor/image/scSmall07.png');
 }
 .project-body:nth-child(8){
-  background-image: url('../../vendor/image/sc08.png');
+  background-image: url('../../vendor/image/scSmall08.png');
 }
-
+.project-body:nth-child(9){
+  background-image: url('../../vendor/image/scSmall09.png');
+}
+.project-body:nth-child(10){
+  background-image: url('../../vendor/image/scSmall10.png');
+}
+.project-body:nth-child(11){
+  background-image: url('../../vendor/image/scSmall11.png');
+}
+.project-body:nth-child(12){
+  background-image: url('../../vendor/image/scSmall12.png');
+}
 .project-image{
   width: 100%;
   height: 100%;
